added modified versions of all files, new text + working links and styling with css

--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> </title>
+    <title>Location</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -28,8 +28,8 @@
             <h3>Adress:</h3>
             <p>Universitetsgatan 2,<br>651 88, Karlstad</p>
         </div>
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2030.6448423926577!2d13.577993216195235!3d59.405637711943776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465cb1318aaf80e9%3A0x1c188ba359a01ecf!2sKarlstad%20Universitetet!5e0!3m2!1ssv!2sse!4v1643219597630!5m2!1ssv!2sse" width="594" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div id="map"> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2030.6448423926577!2d13.577993216195235!3d59.405637711943776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465cb1318aaf80e9%3A0x1c188ba359a01ecf!2sKarlstad%20Universitetet!5e0!3m2!1ssv!2sse!4v1643219597630!5m2!1ssv!2sse" width="894" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <p id="paragraph"></p>
     </div>
