--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> </title>
+    <title>Contact</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -23,7 +23,8 @@
         </nav>
     </header>
     <div id="contactinfo">
-        <h4>Customer service:</h4>
+        <h4><br>
+            <br>Customer service:</h4>
         <h3>Telephone: 0200-141414<br>E-mail: logotypename@customerservice.com 
         <br> Adress: Universitetsgatan 2,<br>651 88, Karlstad</h3>
     </div>
