added final version of all files

--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
 <head>
     <title>About</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2017/09/07/10/25/logo-2724481_960_720.png" width="299" height="200" class="logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
                 <table id="t1">
@@ -58,7 +57,7 @@
 
     </div>
 
-</body>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d37689c691665',m:'g4wBDveSltHCqiQGKiLjBB6BrCejAP7DnAyaO16gbz4-1643404320-0-AR8iew+3FGUJy+vzhU+ed38YCHaFbcCGdQL0TkcqmhD9ozDfp1AipqgPLMFExt6qhyDHWAJdV2NYdyRQ/yAkPEAFxzHkVsQPEHtbo3OI0IQvdtc/0FbUd1KGkB0TdKgEdApj5azk19Ud2OTnO8NdRYsJuscuZwSRv98J3g3qlVGxWKFSlSVdtxkP2am+VIg5iA==',s:[0xd5960eaad4,0x2020a601c7],}})();</script></body>
 
 
 
