--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,11 @@
 <head>
     <title>Contact</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2017/09/07/10/25/logo-2724481_960_720.png" width="299" height="200" class="logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
                 <table id="t1">
@@ -22,13 +21,16 @@
             </div>
         </nav>
     </header>
+
+                                    <!--kontaktinformation:-->
+
     <div id="contactinfo">
         <h4><br>
             <br>Customer service:</h4>
-        <h3>Telephone: 0200-141414<br>E-mail: logotypename@customerservice.com 
+        <h3>Telephone: 0200-141414<br>E-mail:<a href="mailto:pierre.sjoberg@kau.se"> pierre.sjoberg@kau.se</a> 
         <br> Adress: Universitetsgatan 2,<br>651 88, Karlstad</h3>
     </div>
-</body>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d3823aea4f134',m:'KgMCMRQTLkesVX0jriHqg_mJeASq1Z1a4OBNiGoZTLo-1643404350-0-AW9mK1GC3nCojzqKtXUiltB2s1Sh/wwi/do/g8s9fBEGk84MhUEnqmVQxsMpV6AEUEBBkIfpL2bX+NRBpWS11y2wNThZy+ySSEiz8hux1Dwaow3TM72Z06X2PdUFY4bYZjf6S+Ppjxf+XqBPl5qrxad5jnwiTPalhdMFqkxQR3r1oaKtNpjOCZutnzApIgfqgw==',s:[0x5db427964e,0xd03235f069],}})();</script></body>
 
 </html>
 
