--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>website name</title>
+    <title>BILBOYS xD</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2012/04/13/13/52/phoenix-32489_960_720.png" width="299" height="200" class="logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
+
+                <!--klickbar meny:-->
+
                 <table>
                     <th><a href="index.html">Home</a></th>  
                     <th><a href="location.html">Location</a></th>
@@ -24,10 +27,7 @@
     </header>
     <div class="mainpage">
         <div id="welcometext">
-            <h5>Welcome to "logotype name" </h5>
-            <h5>*Insert picture* <br>*Fix backgroundcolor*</h5>
-            <h5>Welcome to "logotype name" </h5>
-            <h5>*Insert picture* <br>*Fix backgroundcolor*</h5>
+          <h1>VÄLKOMMEN TILL BILBOYS xD!!!</h1>
         </div>
         <div>
             <h5>Market preview:</h5>
@@ -41,6 +41,9 @@
                         <th><h3>Information:</h3></th>
                     </tr>
                 </thead>
+
+                                <!--förhandsvisning av bilar till salu:-->
+
                 <tbody>
                     <tr>
                         <td><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2018/01/18/20/56/auto-3091234_960_720.jpg" alt="picture of a turquoise car"/></a></td>
@@ -75,17 +78,21 @@
             </table>
 
         </div>
-    
 
-    
-    <p id="paragraph">paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs
-        paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs paragraphs</p>
-</body>
+        <!--reklam-->
+
+        <section class="reklam">        
+                <div class="reklambild1">
+                    <h1>REKLAM</h1>
+                    <a href="https://www.kau.se/" target="_blank"><img src="images/raidshadowfighters.png"></a>
+                </div>
+                <div class="reklambild2">
+                    <h1>REKLAM</h1>
+                    <a href="https://www.kau.se/"target="_blank"><img src="images/hogrider.jpg"></a>
+                </div>
+        </section>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d38376d29f134',m:'ywT2IYSc50ZWP4gtjXOl5XDS5V2Owa6acNXdE6ryF_Y-1643404353-0-AWlKwztqMXp/D2vHSKfv6y426LVncxSLTVHEqFgURy8ScaH7upjM82el018kYMfrldwmXWXtBB5CsvtbFckkgCuOVMtgzFuwAlzZT1OIji9qPvMyH0IpaRi+NAuTkboDfuXFdIcLldJ63AHUDkkK8yg5IAxpYTXJQ1XElqcuakPhPTxREfCYv1bwV0UGsEE2Ag==',s:[0x0396829b67,0x48ddc8e40a],}})();</script></body>
 
 
 </html>
+
