--- a/location.html
+++ b/location.html
@@ -3,12 +3,11 @@
 <head>
     <title>Location</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2017/09/07/10/25/logo-2724481_960_720.png" width="299" height="200" class="logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
                 <table id="t1">
@@ -34,7 +33,7 @@
         <p id="paragraph"></p>
     </div>
 
-</body>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d38473ccaf134',m:'cTw2Wc_AY6bwwSd9mFWOjypw1HkZVDvOLqxZH6kkrPk-1643404355-0-Ae52qlGHmNCPq4KUg9h+5aM8aITGibwzGXpNxX1EQB3IoGPrxpP+DbzfJuzVsXL/M5AGdlUVuK/StLvA/yuzM5wgPne69YpL/xAA3Flvh9HHFSKV0ZYf9XtpzlDqGLygEzady1dFFwaGT6LL95NY60PJxRn0bYx2pgSe5pqny18ds8mQVzmWkV7T0ZUftIPbkY4snpbJOeE5lKQ/3O6qe6E=',s:[0xd0fe4ab2ba,0xba02de72f3],}})();</script></body>
 
 
 
