--- a/market.html
+++ b/market.html
@@ -3,11 +3,10 @@
 <head>
     <title>Market</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2017/09/07/10/25/logo-2724481_960_720.png" width="299" height="200" class="logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
                 <table id="t1">
@@ -23,42 +22,50 @@
     </header>
     <div id="marketlist">
         <ul>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2018/01/18/20/56/auto-3091234_960_720.jpg" alt="picture of a turquoise car"/></a>
-                <h6>price: 235  000$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2018/01/18/20/56/auto-3091234_960_720.jpg" alt="picture of a turquoise car"/></a>
+                <h6>price: 235  000$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                 <br><br>fuel: petrol<br><br>automatic</h6> 
                 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/03/27/19/44/car-1283947_960_720.jpg" alt=alt="picture of a blue car"/></a>
-                <h6>price: 275 000$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/03/27/19/44/car-1283947_960_720.jpg" alt=alt="picture of a blue car"/></a>
+                <h6>price: 275 000$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2019/08/08/23/33/car-4393990_960_720.jpg" alt="picture of a gray car"/></a>
-                <h6>price: 349 999$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2019/08/08/23/33/car-4393990_960_720.jpg" alt="picture of a gray car"/></a>
+                <h6>price: 349 999$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/09/11/16/47/car-1661767_960_720.jpg" alt="picture of a gray car"/></a>
-                <h6>price: 250 000$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/09/11/16/47/car-1661767_960_720.jpg" alt="picture of a gray car"/></a>
+                <h6>price: 250 000$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2017/08/06/21/08/car-2596344_960_720.jpg" alt="picture of a black car"/></a>
-                <h6>price: 275 999$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2017/08/06/21/08/car-2596344_960_720.jpg" alt="picture of a black car"/></a>
+                <h6>price: 275 999$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2019/06/25/13/06/fiat-4298163_960_720.jpg" alt="picture of a red car"/></a>
-                <h6>price: 200 000$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2019/06/25/13/06/fiat-4298163_960_720.jpg" alt="picture of a red car"/></a>
+                <h6>price: 200 000$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2018/09/15/12/33/nissan-3679299_960_720.jpg" alt="picture of a green car"/></a>
-                <h6>price: 224 000$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2018/09/15/12/33/nissan-3679299_960_720.jpg" alt="picture of a green car"/></a>
+                <h6>price: 224 000$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
-            <li><a href="object.html"><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/11/19/11/37/automobile-1838782_960_720.jpg" alt="picture of a turquoise car"/></a>
-                <h6>price: 259 999$ <br><br>mileage: 60 000 miles<br><br>location: Karlstad
+            <li>
+                <a href=""><img class="annonsbilder" src="https://cdn.pixabay.com/photo/2016/11/19/11/37/automobile-1838782_960_720.jpg" alt="picture of a turquoise car"/></a>
+                <h6>price: 259 999$ <br><br>mileage: 60 000 miles<br><br><a href="location.html">   location: Karlstad      </a>
                     <br><br>fuel: petrol<br><br>automatic</h6> 
             </li>
         </ul>
     </div>
-</body>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d3857fed1f134',m:'Lx_vKily74f2IEcyebfcio9r0gQIhL5roxG6jHgSOZg-1643404358-0-AQaSq3EJy+gtiWZDESqaGyusP0XE+RiXptXG+de76DthrGp1/co2O/k4zP3Sa2URgyZT+HiM3rJ8FCkzt+fkEf9ET5e8CGopOn4iHb8PRAe//JyC4xAxuhynjc9pQRLDgnXE8RUh7dqiJxoN0NkWbxz+krt4HqbBGTqYhAqpOlNXRuJQ0S7QMDjyST01B/Gbnw==',s:[0x5288071535,0x3f772a54e4],}})();</script></body>
 </html>
 
 
