--- a/object.html
+++ b/object.html
@@ -3,12 +3,11 @@
 <head>
     <title>object name</title>
     <link href="style.css" rel="stylesheet">
-</head>
+<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 
 <body>
     <header id="hd">
-        <img src="https://cdn.pixabay.com/photo/2017/09/07/10/25/logo-2724481_960_720.png" width="299" height="200" class="logotype" alt="picture of logotype"/>
-        Logotype name
+        <img src="images/bilboys.png" width="299" height="200" class="logotype"/>
         <nav>
             <div id="table-meny">
                 <table id="t1">
@@ -53,7 +52,7 @@
         volutpat lacus laoreet. Ut tortor pretium viverra suspendisse potenti nullam ac. Vel pharetra vel turpis nunc 
         eget lorem dolor. In arcu cursus euismod quis viverra.</p>
     </div>    
-</body>
+<script type="text/javascript">(function(){window['__CF$cv$params']={r:'6d4d3865eadef134',m:'f3p9RgQ.QjjT1tQyiN2VM_4Ymtvb25oUebZJ1nXCMK4-1643404360-0-ARtq7Qqrw/8shBTJWeC8SmMLahZo6US3uGm+uLH5N8H3elDoybJNDk3FsddUvCDqgMmoh2RpHytc1nMU2MoksWVGXsWFXBGMKRMGeSdeik8vMuTV0PriB4ZMd3KlAtqbYmXyJoF/GTcW/nKJuJDWxQ0VYqyKAC/TN56f3i0sfjsxj+51hzvPxqcVK5EwoTUwBg==',s:[0x6d9ae299d6,0x681bed3199],}})();</script></body>
 
 </html>
 
